--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Grassroot Recipes</h1>
     <ul>
-        <li><a href="recipes/chicken stew.html"> Chicken Stew </a></li>
-        <li><a href="recipes/oha soup.html">Oha-Soup</a></li>
-        <li><a href="recipes/moi moi.html">Moi Moi</a></li>
+        <li><a href="receipes/chicken stew.html"> Chicken Stew </a></li>
+        <li><a href="receipes/oha soup.html">Oha-Soup</a></li>
+        <li><a href="receipes/moi moi.html">Moi Moi</a></li>
     </ul>
     
 </body>
